# ats-landing

./: .env.supabase.example  .gitignore  BRIEF.md  README.md  config.yaml  indicators.py  ingest_engine.py  package-lock.json  package.json  pyproject.toml  regime_detector.py  tailwind.config.js
components/: DashboardPreview.js  Features.js  Hero.js  Layout.js
lib/: supabase.js
pages/: _app.js  _document.js  index.js
pages/dashboard/: index.js
pages/equity/: index.js
research/reports/: regime_timeline_2026-06-12.md
styles/: globals.css
supabase/: config.toml
supabase/.temp/: linked-project.json  pooler-url  project-ref
supabase/migrations/: 20260601000001_enable_realtime.sql  20260601000004_enable_rls.sql  20260613000000_add_atr_and_bb.sql  20260614000000_create_portfolio.sql  20260614000001_add_signal_lifecycle.sql  20260614000002_alter_portfolio_v2.sql  20260622000000_create_equity_engine_state.sql  20260624000000_create_equity_shortlist_and_activity.sql  20260624000001_add_universe_count_to_equity_state.sql
tests/: test_indicators.py  test_ingest.py  test_regime.py
trading/: .gitignore  ARCH.md  ATS_KNOWLEDGE.md  ATS_STATUS.md  OPERATIONS.md  README.md  STRATEGIC_REVIEW.md  TECH_SPEC.md  USER_MANUAL.md  ats.crontab  auth.py  base_yield.py  daily_cron.sh  dashboard.html  fx_alerter.sh  fx_check.py  fx_daemon.py  fx_health_check.py  fx_summary.py  fx_trader.py  hk_alert.sh  hk_format_alert.py  hk_signal.py  image_analyzer.py  inspect_img.py  longbridge_executor.py  perf_analytics.py  stock_names.json  supabase_writer.py
(+84 files in other folders)
